Simplify and modularize S3MockService implementation for upload and delete operations